--- a/sped_sale/views/inherited_sped_documento_base_view.xml
+++ b/sped_sale/views/inherited_sped_documento_base_view.xml
@@ -28,7 +28,7 @@
         <field name="priority">3</field>
         <field name="inherit_id" ref="sped.sped_documento_base_tree"/>
         <field name="arch" type="xml">
-            <field name="participante_id" position="before">
+            <field name="partner_id" position="before">
                 <field name="sale_order_id" />
             </field>
         </field>
