--- a/sped_sale/views/inherited_sale_order_line_base_view.xml
+++ b/sped_sale/views/inherited_sale_order_line_base_view.xml
@@ -478,7 +478,7 @@
                         <page name="suporte" string="Suporte" groups="l10n_br_base.GRUPO_SUPORTE">
                             <group col="4">
                                 <field name="empresa_id" invisible="0"/>
-                                <field name="participante_id" invisible="0"/>
+                                <field name="partner_id" invisible="0"/>
                                 <field name="operacao_id" invisible="0"/>
                                 <field name="data_emissao" invisible="0"/>
 
