--- a/sped_purchase/views/purchase_order_line.xml
+++ b/sped_purchase/views/purchase_order_line.xml
@@ -16,7 +16,7 @@
                     <field name="price_unit" invisible="1"/>
                     <field name="product_qty" invisible="1"/>
                     <field name="empresa_id" invisible="1"/>
-                    <field name="participante_id" invisible="1"/>
+                    <field name="partner_id" invisible="1"/>
                     <field name="operacao_id" invisible="1"/>
                     <field name="data_emissao" invisible="1"/>
                     <field name="product_uom" invisible="1"/>
