[WIP]Display name pesquisa condição pagamento

--- a/l10n_br_base/views/sped_account_payment_term_view.xml
+++ b/l10n_br_base/views/sped_account_payment_term_view.xml
@@ -84,7 +84,7 @@
         <field name="arch" type="xml">
             <tree string="Condições de Pagamento" duplicate="false">
                 <field name="sequence" widget="handle"/>
-                <field name="nome_comercial" />
+                <field name="display_name" />
             </tree>
         </field>
     </record>
