--- a/l10n_br_base/views/sped_produto_produto_view.xml
+++ b/l10n_br_base/views/sped_produto_produto_view.xml
@@ -7,10 +7,10 @@
 
     <record model="ir.ui.view" id="sped_produto_produto_form" >
         <field name="name">sped.produto.produto.form</field>
-        <field name="model">sped.produto</field>
-        <field name="priority">1</field>
-        <field name="mode">primary</field>
-        <field name="inherit_id" ref="l10n_br_base.sped_produto_base_form" />
+        <field name="model">product.template</field>
+        <!--<field name="priority">1</field>-->
+        <!--<field name="mode">primary</field>-->
+        <field name="inherit_id" ref="l10n_br_base.product_template_only_form_view" />
         <field name="arch" type="xml">
             <xpath expr="//form[1]" position="attributes">
                 <attribute name="string">Produto</attribute>
@@ -30,81 +30,81 @@
         </field>
     </record>
 
-    <record model="ir.ui.view" id="sped_produto_produto_tree" >
-        <field name="name">sped.produto.produto.tree</field>
-        <field name="model">sped.produto</field>
-        <field name="priority">1</field>
-        <field name="mode">primary</field>
-        <field name="inherit_id" ref="l10n_br_base.sped_produto_base_tree" />
-        <field name="arch" type="xml">
-            <xpath expr="//tree[1]" position="attributes">
-                <attribute name="string">Produto</attribute>
-            </xpath>
-        </field>
-    </record>
+    <!--<record model="ir.ui.view" id="sped_produto_produto_tree" >-->
+        <!--<field name="name">sped.produto.produto.tree</field>-->
+        <!--<field name="model">sped.produto</field>-->
+        <!--<field name="priority">1</field>-->
+        <!--<field name="mode">primary</field>-->
+        <!--<field name="inherit_id" ref="l10n_br_base.sped_produto_base_tree" />-->
+        <!--<field name="arch" type="xml">-->
+            <!--<xpath expr="//tree[1]" position="attributes">-->
+                <!--<attribute name="string">Produto</attribute>-->
+            <!--</xpath>-->
+        <!--</field>-->
+    <!--</record>-->
 
-    <record model="ir.ui.view" id="sped_produto_produto_search" >
-        <field name="name">sped.produto.produto.search</field>
-        <field name="model">sped.produto</field>
-        <field name="priority">1</field>
-        <field name="mode">primary</field>
-        <field name="inherit_id" ref="l10n_br_base.sped_produto_base_search" />
-        <field name="arch" type="xml">
-            <xpath expr="//search[1]" position="attributes">
-                <attribute name="string">Produto</attribute>
-            </xpath>
-        </field>
-    </record>
+    <!--<record model="ir.ui.view" id="sped_produto_produto_search" >-->
+        <!--<field name="name">sped.produto.produto.search</field>-->
+        <!--<field name="model">sped.produto</field>-->
+        <!--<field name="priority">1</field>-->
+        <!--<field name="mode">primary</field>-->
+        <!--<field name="inherit_id" ref="l10n_br_base.sped_produto_base_search" />-->
+        <!--<field name="arch" type="xml">-->
+            <!--<xpath expr="//search[1]" position="attributes">-->
+                <!--<attribute name="string">Produto</attribute>-->
+            <!--</xpath>-->
+        <!--</field>-->
+    <!--</record>-->
 
-    <record model="ir.ui.view" id="sped_produto_produto_kanban" >
-        <field name="name">sped.produto.produto.kanban</field>
-        <field name="model">sped.produto</field>
-        <field name="priority">1</field>
-        <field name="mode">primary</field>
-        <field name="inherit_id" ref="l10n_br_base.sped_produto_base_kanban" />
-        <field name="arch" type="xml">
-            <xpath expr="//kanban[1]" position="attributes">
-                <attribute name="string">Produto</attribute>
-            </xpath>
-        </field>
-    </record>
+    <!--<record model="ir.ui.view" id="sped_produto_produto_kanban" >-->
+        <!--<field name="name">sped.produto.produto.kanban</field>-->
+        <!--<field name="model">sped.produto</field>-->
+        <!--<field name="priority">1</field>-->
+        <!--<field name="mode">primary</field>-->
+        <!--<field name="inherit_id" ref="l10n_br_base.sped_produto_base_kanban" />-->
+        <!--<field name="arch" type="xml">-->
+            <!--<xpath expr="//kanban[1]" position="attributes">-->
+                <!--<attribute name="string">Produto</attribute>-->
+            <!--</xpath>-->
+        <!--</field>-->
+    <!--</record>-->
 
-    <record model="ir.actions.act_window" id="sped_produto_produto_acao">
-        <field name="name">Produtos</field>
-        <field name="domain">[('tipo', '!=', '09')]</field>
-        <field name="context">{'default_tipo': '00', 'default_ref_unidade_id': 'l10n_br_base.UNIDADE_UNIDADE'}</field>
-        <field name="res_model">sped.produto</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">kanban,tree,form</field>
-    </record>
+    <!--<record model="ir.actions.act_window" id="sped_produto_produto_acao">-->
+        <!--<field name="name">Produtos</field>-->
+        <!--<field name="domain">[('tipo', '!=', '09')]</field>-->
+        <!--<field name="context">{'default_tipo': '00', 'default_ref_unidade_id': 'l10n_br_base.UNIDADE_UNIDADE'}</field>-->
+        <!--<field name="res_model">sped.produto</field>-->
+        <!--<field name="view_type">form</field>-->
+        <!--<field name="view_mode">kanban,tree,form</field>-->
+    <!--</record>-->
 
-    <record model="ir.actions.act_window.view" id="sped_produto_produto_kanban_acao">
-        <field eval="1" name="sequence"/>
-        <field name="view_mode">kanban</field>
-        <field name="view_id" ref="sped_produto_produto_kanban"/>
-        <field name="act_window_id" ref="sped_produto_produto_acao"/>
-    </record>
+    <!--<record model="ir.actions.act_window.view" id="sped_produto_produto_kanban_acao">-->
+        <!--<field eval="1" name="sequence"/>-->
+        <!--<field name="view_mode">kanban</field>-->
+        <!--<field name="view_id" ref="sped_produto_produto_kanban"/>-->
+        <!--<field name="act_window_id" ref="sped_produto_produto_acao"/>-->
+    <!--</record>-->
 
-    <record model="ir.actions.act_window.view" id="sped_produto_produto_tree_acao">
-        <field eval="2" name="sequence"/>
-        <field name="view_mode">tree</field>
-        <field name="view_id" ref="sped_produto_produto_tree"/>
-        <field name="act_window_id" ref="sped_produto_produto_acao"/>
-    </record>
+    <!--<record model="ir.actions.act_window.view" id="sped_produto_produto_tree_acao">-->
+        <!--<field eval="2" name="sequence"/>-->
+        <!--<field name="view_mode">tree</field>-->
+        <!--<field name="view_id" ref="sped_produto_produto_tree"/>-->
+        <!--<field name="act_window_id" ref="sped_produto_produto_acao"/>-->
+    <!--</record>-->
 
-    <record model="ir.actions.act_window.view" id="sped_produto_produto_form_acao">
-        <field eval="3" name="sequence"/>
-        <field name="view_mode">form</field>
-        <field name="view_id" ref="sped_produto_produto_form"/>
-        <field name="act_window_id" ref="sped_produto_produto_acao"/>
-    </record>
+    <!--<record model="ir.actions.act_window.view" id="sped_produto_produto_form_acao">-->
+        <!--<field eval="3" name="sequence"/>-->
+        <!--<field name="view_mode">form</field>-->
+        <!--<field name="view_id" ref="sped_produto_produto_form"/>-->
+        <!--<field name="act_window_id" ref="sped_produto_produto_acao"/>-->
+    <!--</record>-->
 
-    <menuitem
-        id="menu_sped_produto_produto"
-        sequence="1"
-        name="Produto"
-        parent="menu_cadastro_produto"
-        action="sped_produto_produto_acao"
-        />
+    <!--<menuitem-->
+        <!--id="menu_sped_produto_produto"-->
+        <!--sequence="1"-->
+        <!--name="Produto"-->
+        <!--parent="menu_cadastro_produto"-->
+        <!--action="sped_produto_produto_acao"-->
+        <!--/>-->
 
 </odoo>
