--- a/sped_purchase/views/sped_documento_emissao_nfe_view.xml
+++ b/sped_purchase/views/sped_documento_emissao_nfe_view.xml
@@ -14,12 +14,13 @@
                 <group colspan="4">
                     <field name="purchase_order_ids" widget="many2many_tags"
                            domain="[('invoice_status', '=', 'to invoice'),
-                           '|', ('participante_id', '=', participante_id), ('participante_id', '=', False),
+                           '|', ('partner_id', '=', partner_id), ('partner_id', '=', False),
                            '|', ('empresa_id', '=', empresa_id), ('empresa_id', '=', False)]"/>
                 </group>
             </group>
             <field name="item_ids" position="attributes">
                 <attribute name="context">{
+                    'cfop_tam_desc': 'curta',
                     'form_view_ref': 'sped_purchase.sped_documento_item_form',
                     'tree_view_ref': 'sped_purchase.sped_documento_item_tree',
                     'manual': True
