--- a/l10n_br_mdfe/views/sped_documento.xml
+++ b/l10n_br_mdfe/views/sped_documento.xml
@@ -49,11 +49,45 @@
                         </group>
                     </group>
                     <notebook>
-                        <page name="participante" string="Rodoviário">
-                            <group>
-                                <group colspan="6" col="6">
-                                    <separator string="Destinatário" colspan="6" attrs="{'invisible': [('entrada_saida', '=', '0')]}" />
-                                    <separator string="Remetente" colspan="6" attrs="{'invisible': [('entrada_saida', '=', '1')]}" />
+                        <page name="rodoviario" string="Rodoviário">
+                            <notebook>
+                                <page string="Veiculo de Tração" name="veiculo_tracao">
+                                    <group>
+                                        <group string="Veículo" name="dados_veiculo">
+                                            <field name="veiculo_id"/>
+                                            <field name="veiculo_ciot"/>
+                                            <field name="veiculo_placa"/>
+                                            <field name="veiculo_estado_id"/>
+                                            <field name="veiculo_tipo_rodado"/>
+                                            <field name="veiculo_tipo_carroceria"/>
+                                            <field name="veiculo_tara_kg"/>
+                                            <field name="veiculo_capacidade_kg"/>
+                                            <field name="veiculo_capacidade_m3"/>
+                                        </group>
+                                        <group string="Condutores" name="condutores">
+                                            <field name="condutor_id"/>
+                                            <field name="condutor_nome"/>
+                                            <field name="condutor_cfp"/>
+                                        </group>
+                                    </group>
+                                </page>
+                                <page string="Reboque" name="reboque">
+                                    <!--TODO:-->
+                                </page>
+                                <page string="CIOT" name="ciot">
+                                    <!--TODO:-->
+                                </page>
+                                <page string="Contratantes" name="contratantes">
+                                    <!--TODO:-->
+                                </page>
+                                <page string="Vale Pedágio" name="vale_pedagio">
+                                    <!--TODO:-->
+                                </page>
+                            </notebook>
+                            <!--<group>-->
+                                <!--<group colspan="6" col="6">-->
+                                    <!--<separator string="Destinatário" colspan="6" attrs="{'invisible': [('entrada_saida', '=', '0')]}" />-->
+                                    <!--<separator string="Remetente" colspan="6" attrs="{'invisible': [('entrada_saida', '=', '1')]}" />-->
                                     <!--<field name="participante_id" nolabel= "1" colspan="6" required="1" options="{'no_open': True, 'no_create': True}" domain="[('cnpj_cpf', '!=', False)]" attrs="{'readonly': [('permite_alteracao', '=', False)]}" />-->
                                     <!--<newline />-->
                                     <!--<field name="participante_razao_social" string="Nome completo Razão Social" colspan="6" />-->
@@ -89,8 +123,8 @@
                                     <!--<newline />-->
                                     <!--<field name="participante_estado" invisible="1" />-->
                                     <!--<field name="participante_eh_orgao_publico" invisible="1" />-->
-                                </group>
-                            </group>
+                                <!--</group>-->
+                            <!--</group>-->
                         </page>
                         <!--<page name="itens" string="Itens">-->
                             <!--<group>-->
@@ -99,30 +133,27 @@
                                 <!--</group>-->
                             <!--</group>-->
                         <!--</page>-->
+                        <page name="itens_mdfe" string="Entregas">
+
+                        </page>
                         <page name="totais" string="Totais">
-                            <notebook>
-                                <page string="Valores">
-                                    <group>
-                                        <group colspan="4" col="4">
-                                            <group colspan="4" col="4" string="Valores principais">
-                                                <field name="vr_produtos" colspan="2" string="Produtos/serviços" />
-                                                <field name="vr_nf" colspan="2" string="Total da NF" />
-                                                <newline />
-                                                <field name="vr_frete" colspan="2" string="Frete" />
-                                                <field name="vr_fatura" colspan="2" string="Total da fatura" />
-                                                <newline />
-                                                <field name="vr_seguro" colspan="2" string="Seguro" />
-                                                <newline />
-                                                <field name="vr_outras" colspan="2" string="Outras" />
-                                                <field name="vr_pagamentos" colspan="2"/>
-                                                <field name="vr_desconto" colspan="2" string="Desconto" />
-                                                <field name="vr_troco" colspan="2"/>
-                                                <field name="vr_operacao" colspan="2" string="Operação" />
-                                            </group>
-                                        </group>
-                                    </group>
-                                </page>
-                            </notebook>
+                            <group colspan="4" col="4">
+                                <group colspan="4" col="4" string="Valores principais">
+                                    <field name="vr_produtos" colspan="2" string="Produtos/serviços" />
+                                    <field name="vr_nf" colspan="2" string="Total da NF" />
+                                    <newline />
+                                    <field name="vr_frete" colspan="2" string="Frete" />
+                                    <field name="vr_fatura" colspan="2" string="Total da fatura" />
+                                    <newline />
+                                    <field name="vr_seguro" colspan="2" string="Seguro" />
+                                    <newline />
+                                    <field name="vr_outras" colspan="2" string="Outras" />
+                                    <field name="vr_pagamentos" colspan="2"/>
+                                    <field name="vr_desconto" colspan="2" string="Desconto" />
+                                    <field name="vr_troco" colspan="2"/>
+                                    <field name="vr_operacao" colspan="2" string="Operação" />
+                                </group>
+                            </group>
                         </page>
                         <!--<page name="transporte" string="Transporte">-->
                             <!--<group>-->
