--- a/l10n_br_mdfe/views/sped_documento.xml
+++ b/l10n_br_mdfe/views/sped_documento.xml
@@ -173,6 +173,14 @@
                                     <field name="vr_troco" colspan="2"/>
                                     <field name="vr_operacao" colspan="2" string="Operação" />
                                 </group>
+                                <group name="lacres">
+                                    <field name="lacre_ids" nolabel="1">
+                                        <tree editable="top">
+                                            <field name="name" string="Lacres"/>
+                                        </tree>
+                                    </field>
+
+                                </group>
                             </group>
                         </page>
                         <!--<page name="transporte" string="Transporte">-->
