--- a/l10n_br_base/views/sped_produto_base_view.xml
+++ b/l10n_br_base/views/sped_produto_base_view.xml
@@ -63,6 +63,7 @@
                             <group col="4">
                                 <field name="peso_bruto" />
                                 <field name="peso_liquido" />
+                                <field name="volume_liquido" />
                                 <field name="especie" />
                                 <field name="fator_quantidade_especie" />
                             </group>
