--- a/l10n_br_mdfe/views/sped_documento.xml
+++ b/l10n_br_mdfe/views/sped_documento.xml
@@ -11,9 +11,20 @@
             <form string="Emissão de MDF-E" duplicate="false">
                 <header>
                     <field name="permite_cancelamento" invisible="1"/>
-                    <field name="permite_inutilizacao" invisible="1"/>
                     <field name="permite_alteracao" invisible="1" />
-                    <!-- HEADER VAZIO PARA SE ADICIONAR OS BOTOES EM OUTRAS VISOES E MODULOS HERDADOS -->
+                    <button name="confirma_documento"
+                            string="Confirmar"
+                            type="object"
+                            class="btn-primary"
+                    />
+                    <button name="envia_documento"
+                            string="Enviar"
+                            type="object"
+                            class="btn-primary"
+                    />
+                    <button name="envia_email_nfe" string="Enviar email" type="object" class="btn-default" />
+                    <button name="imprimir_documento" string="Imprimir" type="object" class="btn-default"/>
+                    <button name="%(sped_nfe.nfe_motivo_cancelamento_wizard_action)d" string="Cancelar" type="action"/>
                 </header>
                 <sheet>
                     <field name="emissao" invisible="1" />
